<resources>
    <string name="app_name"><b>Prabisha Startup Network</b></string>
    <string name="title_activity_navigation_activity">navigation_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <string name="about_us_detail_first">They think and explore new ways to make our day to day life
        easier and better by implementing their billion dollar ideas on the ground.

Their ideas have the potential to change our world forever. Today, there are many examples
        like Oyo, Paytm, Google, Facebook, HP, Apple, Uber, Tesla, Yulu, etc. who started their journey as a
        startup and have changed our world forever from their unique offerings.

There are many more startup leaders who also have similar big ideas and are daring to change this world but
        COVID19 has impacted their life and work badly. These thought leaders need our help now much more than ever before.
    </string>
    <string name="about_us_detail_second">
        Prabisha Consulting, a trusted name in the area of Digital Marketing, Graphics
        Design and Technology Development is launching an initiative to help such start up leaders express their big
        ideas and share their dreams with all of us. We need to share their wonderful ideas and let them go far and wide
        to help the human kind get the best of these super leaders. We need to cut the clutter and provide them equitable opportunity
        and a promising platform for help, support and visibility.

Every week, promising Start up Leaders will share their thoughts, work, learnings and future plans on the platform of
        Prabisha Startup Network. Join us in this mission to help our thought leaders achieve their full potential.
    </string>
    <string name="PlanningOfStartup">How we are planning to create a startup ecosystem?</string>
    <string name="PSNMembership">PSN Membership</string>
    <string name="feed_information">Every week, promising Startup leaders will share their thoughts, work, learnings and future
        plans on our platform. This would
        be further amplified by PSN team on a number of online and offline platforms for greater visibility.</string>
    <string name="Home_heading">Who are startup leaders?</string>
    <string name="Home_information">Start Up leaders are real change makers of our times.
        They dare to dream.
        They think and explore new ways to make our day to day life easier and better by implementing their billion dollar ideas on the ground.
Their ideas have the potential to change our world forever. Today, there are many examples like Oyo,
        Paytm, Google, Facebook, HP, Apple, Uber, Tesla, Yulu, etc. who started their journey as a startup and have changed our world
        forever from their unique offerings.
There are many more startup leaders who also have similar big ideas and are daring to change this world but COVID19 has impacted their life and work badly.
        These thought leaders need our help now much more than ever before.</string>
    <string name="Who_we_are">Prabisha Startup Network is an initiative started by Prabisha Consulting,
        a trusted name in the area of Digital Marketing,Graphic Design and Technology Development.</string>
    <string name="Services_Branding_marketing">Branding and Marketing</string>
    <string name="Services_Website_Development">Website Design and Development</string>
    <string name="Services_Digital_Marketing">Digital Marketing</string>
    <string name="Services_Video_Animation_Prod">Video and Animation Production</string>
    <string name="Services_Company_Registration">Company Registration</string>
    <string name="Services_Hiring_Support">Hiring Support</string>
    <string name="Services_Website_Developmen_details"></string>
    <string name="Services_Digital_Marketing_deatils"></string>
    <string name="Services_Video_Animation_Prod_deatils"></string>
    <string name="Services_Branding_marketing_deatils"></string>
    <string name="news_1">IRCTC net profit declines 62% to Rs 78 crore in December quarter</string>
    <string name="news_2">LIVE: UP govt asks police officers to end farmers protests in state</string>
    <string name="news_3">CybSafe raises $7.9M Series A led by IQ Capital for its ‘behavioral’ cybersecurity platform</string>
    <string name="news_4">Smartphone sales slowed decline in Q4, with a big assist from Apple</string>
    <string name="news_5">TIME TO GET OFF THE SIDELINES AND GET IN THE GAME</string>
    <string name="news_6">THIS IS MY STORY: HOW I FOUND MY PURPOSE AND TURNED MY IDEAS INTO A MULTI-MILLION DOLLAR BUSINESS</string>
    <string name="news_7">Online education firm LawSikho signs pact with MEPSC for law courses</string>
    <string name="news_8">Education companies revenues to remain flat in 2020-21: Report</string>
    <string name="news_9">Expecting a rebound in health services soon, says Ayushman Bharat CEO</string>
    <string name="news_10">Adani Ports raises $500 mn selling 10-year bonds to foreign investors</string>
    <string name="blog1">1. How Indian Start-ups are helping in nation Building</string>
    <string name="blog1_detail">India is remarkably growing and developing among various sectors of the Industry such as FINTECH,
        AI (artificial intelligence), MedTech, hospitality, automobiles, and more. Here, start-ups play a significant role. Start-ups
        are small companies with fewer funds and few entrepreneurs, But despite being a small company it has an immense
        role to play in economic growth and development. They also help in contributing to innovation and injecting competition.
        Allowing the start-ups to bring a ray of hope to the people that lack capital shouldn’t be the restrictive factor.

        An idea, no matter how small can be the new big innovation out there. Today, the building
        of a nation depends on the quality and scale of start-ups that any country possesses. In India,
        there is a rise in the number of start-ups from the previous year. India has become a hub of creativity where
        people are keen to learn, explore, and are hardworking which results in pushing up several new start-ups. There was an
        addition of about more than 1300 start-ups from distinct sectors in 2019. These start-ups allow entrepreneurs to show
        their creativity and also provide them with the platform for the same. Due to these start-ups, there is a great jump
        in employment. Every new start-up needs a team, workers, staff to work along with.

        Around 500 million users of the Internet are from rural areas and the smaller town of India.
        Start-ups have also resulted in removing the gap between urban and rural areas, instead, they
        also allow them to learn and showcase their talent in front of the whole society. Start-ups have become
        the resource for the people who have talent but due to lack of money and technology they are not able to
        accomplish their dreams. Many successful start-ups have shown tremendous results in very little time such
        as One97 (Paytm) industry, Ola cabs, Snapdeal, Swiggy, Zomato, and many more. The Government of India has
        also supported our youth with their projects and has taken adequate steps to promote the culture of entrepreneurship in the country.

        Start-up India initiative (or start-up India program) was launched by the Indian Government in 2016 for supporting
        entrepreneurs by building a robust start-up ecosystem, giving them funding support and the government also started
        ‘GeM Start-up Runway’ is a special concept launched by GeM (Government e-marketplace) in partnership with Start-up India.
        The platform grants an opportunity for start-ups where they can directly get orders from government buyers. Under the Start-up
        India program, the government also created the ‘Fund of funds of start-ups(FFS) with a collection of INR 10,000 crore funding promising start-ups.

        We have already witnessed a lot of successful businesses that started as mere start-ups and a lot more are yet to come.
        Start-up indeed is the seeds that help to grow a more powerful and technically strong nation. India is on the path to build
        a nation that attracts and inspires not only the citizens of our county but also other nations. Start-ups are playing a key
        role in economic growth and they create more jobs which mean more employment and which results in an improved economy.</string>
    <string name="blog2">2. Build your own Cloud Storage System using <b>Nextcloud</b></string>
    <string name="blog2_detail">Why waste valuable storage space on your PC or phone when you can store documents and media in the cloud?
        Computer systems have been steadily moving away from local storage to remote, server based storage and processing – which is also known
        as the cloud.
        Is cloud storage really needed?
        Cloud storage is ideal when you want to access your personal files, documents, videos or images quickly. With the cloud, your data is
        stored on hardware that is in a remote physical location, which can then be accessed from any device over the Internet. Cloud storage
        delivers a cost-effective, scalable alternative to storing files in on-premise hard drives or storage networks.
        If you don’t yet have a service for storing and syncing your data in the cloud, you should seriously consider using one.</string>
    <string name="blog3">3. Build a Backup and Recovery Solution with <b>Duplicati</b></string>
    <string name="faq_ques_1">How do we become a member?</string>
    <string name="faq_ques_2">Is there any criteria that you look for before publishing a startup story?
    </string>
    <string name="faq_ques_3">What all platforms do you publish your stories on?
    </string>
    <string name="faq_ques_4">What are the various modes in which you conduct the interviews ?
    </string>
    <string name="faq_ques_5">If I come to you with an idea in what all ways will you be able to help me?
    </string>
    <string name="faq_ques_6">What are the benefits of being a part of Prabisha Startup Network?
    </string>
    <string name="faq_ques_7">Do you charge any fee for interviewing or sharing success stories of startups?
    </string>
    <string name="faq_ques_8">What is the eligibility criteria to join PSN?
    </string>
    <string name="faq_ques_9">Why do Investors invest in Startups?
    </string>
</resources>