<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Home_heading"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="25dp"
                android:padding="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_display_one"
                android:layout_gravity="center"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@color/TextBackgroundColour"
                android:padding="20dp"
                android:layout_weight="1"
                android:text="@string/Home_information"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Services"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="25dp"
                android:padding="20dp"
                android:textColor="#D207F4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Services_Website_Development"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/web_design_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Services_Digital_Marketing"
                android:layout_margin="10dp"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/digital_marketing_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Services_Video_Animation_Prod"
                android:layout_margin="10dp"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/video_animation_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Services_Branding_marketing"
                android:layout_margin="10dp"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/branding_marketing_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Services_Company_Registration"
                android:layout_margin="10dp"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/company_registration_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Services_Hiring_Support"
                android:layout_margin="10dp"
                android:layout_gravity="start" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hiring_support_image"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Who we are ?"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="25dp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Who_we_are"
                android:layout_margin="25dp"
                android:layout_gravity="start" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/social_media_creatives_add"
                android:id="@+id/social_media_creative_add"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>